# enterprise-context-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SHOP_DATA_PLAN.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-demo.yml  release.yml
admin/graph-viewer/: Dockerfile  README.md  app.js  index.html
connectors/: __init__.py
connectors/jira/: __init__.py  transformer.py  webhook_handler.py
demo/: README.md  app.js  index.html  styles.css
demo/data/globex-industries/: users.json
demo/data/initech-global/: users.json
demo/data/umbrella-holdings/: users.json
docs/: ENGINEERING_STANDARDS.md  admin-ui-guide.md  architecture.md  connector-guide.md  log-listener-guide.md  protocol-guide.md  schema-guide.md  sdk-guide.md
docs/adr/: 001-neo4j-over-alternatives.md  002-no-llm-in-ingestion.md  003-three-ingestion-paths.md  004-template-vs-llm-profiler.md
samples/: README.md  __init__.py
samples/data/: __init__.py  catalog.py  event_builder.py  patterns.py  recurrence.py  seed_events.json  seed_events.py
samples/log-simulator/: README.md  log_generator.py  log_listener.py
samples/shops/: README.md  __init__.py  framework.py  generate.py  oracle.py  salesforce.py  sap.py
samples/task-tracker/: README.md  app.py
schemas/event/v1.0.0/: event.schema.json
sdk/node/: README.md  package-lock.json  package.json
sdk/node/src/: index.ts
sdk/node/tests/: index.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/context_engine_sdk/: __init__.py  client.py
sdk/python/tests/: test_client.py
src/context_engine/: __init__.py  config.py
src/context_engine/api/: __init__.py  app.py  dependencies.py  metrics.py
tests/: conftest.py  test_admin_routes.py  test_architecture.py  test_doc_links.py  test_event_ingestion.py  test_graph_operations.py  test_identity_resolution.py  test_jira_connector.py  test_mcp_server.py  test_models.py  test_pattern_detection.py  test_profile_generation.py  test_profile_scheduler.py  test_resolve_intent.py  test_schema_validation.py  test_shop_data.py  test_tenant_isolation.py  test_user_profile.py
(+53 files in other folders)
