[project]
name = "context-engine"
version = "0.1.0"
description = "Vendor-neutral context resolution service for LLMs and AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "neo4j>=5.24",
    "jsonschema>=4.23",
    "structlog>=24.4",
    "mcp>=1.1",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "testcontainers[neo4j]>=4.8",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-jsonschema>=4.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Put the repo root on sys.path so tests can import the top-level `connectors`
# and `samples` packages under a bare `pytest` invocation (as CI runs it), not
# just `python -m pytest`.
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends()/Body()/Query() in argument defaults is the documented,
# idiomatic pattern for dependency injection, not the mutable-default-argument bug
# this rule normally guards against.
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.10"
mypy_path = "src"
